JPS: compile server settings is now application-wide